# usage-time-tracker

./: .gitignore  DEVELOPMENT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
scripts/: gen_icon.py
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  platform.rs  runloop.rs  tracker.rs  tray.rs
src/lib/: api.ts  format.test.ts  format.ts  pdf.ts
src/views/: AppsView.tsx  HistoryView.tsx  OnboardingView.tsx  SettingsView.tsx  TodayView.tsx
